--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.15]
+        node-version: [12.x]
 
     steps:
     - uses: actions/checkout@v2
